gcc/testsuite/rust/rustc/ui/parser/issues/missing-main-issue-124935-semi-after-item.rs
// Regression test for issue #124935
// Tests that we still emit an error after an item.

fn main() { }
;
// { dg-error "" "" { target *-*-* } .-1 }

